# uday-m-rade-website

./: LICENSE  README.md  app.py  pyproject.toml
static/: home (copy).html  nav (copy).html
static/Lifestyle/Travel/jandk/: IMG_3766.HEIC  IMG_3867.HEIC
templates/: career.html  footer.html  home.html  lifestyle.html  lifestylefitness.html  lifestylehobbies.html  lifestyletravel.html  nav.html
templates/macros/: ribbon_cooking.html  ribbon_courses.html  ribbon_education.html  ribbon_exp.html  ribbon_food.html  ribbon_gallery.html  ribbon_intern.html  ribbon_projects.html  ribbon_skills.html  ribbon_softskills.html  ribbon_teaching.html
templates/travel/: travelagra.html  travelamritsar.html  travelchicago.html  traveldelhi.html  travelindy.html  traveljandk.html  travellax.html  travelmiami.html  travelnyc.html  travelsandiego.html  travelslc.html
